--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,17 +97,10 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
 
-      - name: Extract version
-        uses: bhowell2/github-substring-action
-        id: version
-        with:
-          value: ${{ env.RELEASE_VERSION }}
-          index_of_str: "v"
-
       - name: Publish to npm
         run: |
           yarn install
-          npm version ${{steps.version.outputs.substring}}
+          npm version ${{env.RELEASE_VERSION}}
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
